--- a/public/stats.html
+++ b/public/stats.html
@@ -5,7 +5,7 @@
 <title>실적 조회 - The Listen</title>
 <style>
   body{margin:0;background:#f7f9fc;font-family:"Noto Sans KR",sans-serif}
-  header{background:#007bff;color:#fff;text-align:center;padding:12px;font-weight:700}
+  header{background:#007bff;color:#fff;text-align:center;padding:12px;font-weight:800}
   .wrap{max-width:820px;margin:16px auto;padding:12px}
   .card{background:#fff;border-radius:16px;box-shadow:0 10px 26px rgba(0,0,0,.06);padding:14px;margin-bottom:10px}
   label{font-weight:700;margin-right:8px}
@@ -34,24 +34,21 @@
   </div>
 </div>
 <script>
-const data = JSON.parse(localStorage.getItem('completed')||'[]');
+const data=JSON.parse(localStorage.getItem('completed')||'[]');
 function loadDay(){
-  const d=document.getElementById('day').value; if(!d) return;
+  const d=day.value; if(!d) return;
   const rows=data.filter(x=>x.date===d);
-  document.getElementById('dayResult').innerHTML = rows.length===0 ? '해당일 완료 없음' :
-    `<table><thead><tr><th>운송장</th><th>주소</th><th>일자</th></tr></thead><tbody>${
-      rows.map(r=>`<tr><td>${r.id}</td><td>${r.address}</td><td>${r.date}</td></tr>`).join('')
-    }</tbody></table>`;
+  dayResult.innerHTML = rows.length===0 ? '해당일 완료 없음'
+    : `<table><thead><tr><th>운송장</th><th>주소</th><th>일자</th></tr></thead><tbody>${
+        rows.map(r=>`<tr><td>${r.id||'-'}</td><td>${r.address}</td><td>${r.date}</td></tr>`).join('')
+      }</tbody></table>`;
 }
 function loadMonth(){
-  const m=document.getElementById('month').value; if(!m) return;
+  const m=month.value; if(!m) return;
   const rows=data.filter(x=>x.date && x.date.startsWith(m));
-  const pay = rows.length * 1000; // 데모: 월료 1건 1000원 가정
-  document.getElementById('monthResult').innerHTML = `
-    <div><b>${m}</b> 총 완료: <b>${rows.length}</b>건 · 예상 월료: <b>${pay.toLocaleString()}</b>원</div>
-  `;
+  const pay=rows.length*1000; // 예시: 1건 1000원
+  monthResult.innerHTML = `<div><b>${m}</b> 총 완료: <b>${rows.length}</b>건 · 예상 월료: <b>${pay.toLocaleString()}</b>원</div>`;
 }
 </script>
 </body>
 </html>
-
