--- a/public/depart.html
+++ b/public/depart.html
@@ -3,11 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>배송출발 - 바코드 스캔 · 스캐너 연동</title>
-
-<!-- ZXing 바코드 스캐너 (브라우저용) -->
+<title>배송출발 - 스캔</title>
 <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/index.min.js"></script>
-
 <style>
   body{margin:0;background:#f7f9fc;font-family:"Noto Sans KR",sans-serif}
   header{background:#007bff;color:#fff;text-align:center;padding:12px;font-weight:800}
@@ -15,34 +12,22 @@
   .grid{display:grid;grid-template-columns:1fr 1fr;gap:14px}
   .card{background:#fff;border-radius:16px;box-shadow:0 10px 28px rgba(0,0,0,.06);padding:14px}
   h3{margin:8px 0 10px}
-  .row{margin:8px 0}
   input[type="text"]{width:100%;padding:12px;border:1px solid #e5e7eb;border-radius:10px;font-size:15px}
   .btn{background:#007bff;color:#fff;border:none;border-radius:10px;padding:10px 12px;cursor:pointer;font-weight:700}
-  .btn.gray{background:#6b7280}
-  .btn.red{background:#ef4444}
-  .btnRow{display:flex;gap:8px;flex-wrap:wrap}
+  .btn.gray{background:#6b7280}.btn.red{background:#ef4444}
+  .row{margin:8px 0}.btnRow{display:flex;gap:8px;flex-wrap:wrap}
   .list{max-height:48vh;overflow:auto;border:1px solid #eef2f7;border-radius:12px;padding:8px}
   .item{display:flex;justify-content:space-between;align-items:center;border-bottom:1px solid #f1f5f9;padding:8px 4px}
-  .muted{color:#6b7280;font-size:.9rem}
   .count{font-weight:900;font-size:18px}
-  /* 카메라 미리보기 */
   .camWrap{position:relative;border-radius:12px;overflow:hidden;background:#000}
   video{width:100%;height:auto;display:block}
-  /* 얇은 바코드 인식 가이드 라인 */
-  .guide{
-    position:absolute;left:0;right:0;top:50%;transform:translateY(-50%);
-    height:2px;background:rgba(0,123,255,.9);
-    box-shadow:0 0 12px rgba(0,123,255,.6);
-  }
-  .tip{color:#64748b;font-size:.9rem}
+  .guide{position:absolute;left:0;right:0;top:50%;transform:translateY(-50%);height:2px;background:rgba(0,123,255,.9);box-shadow:0 0 12px rgba(0,123,255,.6)}
 </style>
 </head>
 <body>
-<header>🚚 배송출발 · 바코드 스캔 / 스캐너 연동</header>
-
+<header>🚚 배송출발 (스캔 수량만 표기)</header>
 <div class="wrap">
   <div class="grid">
-    <!-- 좌측: 카메라 스캔 -->
     <div class="card">
       <h3>📸 카메라 바코드 스캔</h3>
       <div class="camWrap">
@@ -52,165 +37,44 @@
       <div class="row btnRow" style="margin-top:10px;">
         <button class="btn" id="btnStart">카메라 시작(후면)</button>
         <button class="btn gray" id="btnStop">정지</button>
-        <button class="btn" id="btnTorch" style="display:none;">플래시 토글</button>
+        <button class="btn" id="btnTorch" style="display:none;">플래시</button>
       </div>
-      <div class="tip" style="margin-top:8px;">가이드 라인 위로 바코드를 얇게 맞춰주세요.</div>
     </div>
-
-    <!-- 우측: 스캔/스캐너 입력 리스트 -->
     <div class="card">
       <h3>🔢 스캔 목록 <span class="count" id="scanCount">0</span> 건</h3>
-      <div class="row">
-        <input id="scanInput" type="text" placeholder="스캐너/수기 입력 포커스(엔터로 추가) — HID 스캐너 대응" />
-      </div>
+      <div class="row"><input id="scanInput" type="text" placeholder="스캐너/수기 입력(엔터)" /></div>
       <div class="btnRow">
         <button class="btn" id="btnAdd">추가</button>
         <button class="btn gray" id="btnClear">전체 초기화</button>
+        <button class="btn" onclick="goMap()">🧭 지도로 이동(최적경로)</button>
       </div>
       <div class="list" id="list"></div>
-
-      <div class="row" style="margin-top:12px;border-top:1px dashed #e5e7eb;padding-top:12px;">
-        <div class="btnRow">
-          <button class="btn" id="btnOptimize">🧭 최적 경로 설정</button>
-          <button class="btn" onclick="location.href='map.html'">현재 지도보기 연결</button>
-          <button class="btn gray" onclick="location.href='dashboard.html'">대시보드로</button>
-        </div>
-        <div class="tip" style="margin-top:8px;">
-          • 블루투스/유선 스캐너는 대부분 <b>키보드(HID) 장치</b>로 동작합니다. 입력창 포커스를 유지하면 자동 입력됩니다.<br/>
-          • ‘최적 경로 설정’을 누르면 현재 위치 기준 정렬 플래그가 저장되고 <b>map.html</b>에서 반영됩니다.
-        </div>
-      </div>
     </div>
   </div>
 </div>
-
 <script>
-/** ===========================
- *  1) 스캔 목록 상태 관리
- * ========================== */
-const $scanInput = document.getElementById('scanInput');
-const $scanCount = document.getElementById('scanCount');
-const $list = document.getElementById('list');
-let scanList = JSON.parse(localStorage.getItem('scanList') || '[]');
+const $scanInput=document.getElementById('scanInput');
+const $scanCount=document.getElementById('scanCount');
+const $list=document.getElementById('list');
+let scanList=JSON.parse(localStorage.getItem('scanList')||'[]');
 
-function renderList(){
-  $list.innerHTML = scanList.map((code, idx)=>`
-    <div class="item">
-      <div>
-        <div><b>${code}</b></div>
-        <div class="muted">운송장 번호</div>
-      </div>
-      <button class="btn red" onclick="removeAt(${idx})">삭제</button>
-    </div>
-  `).join('');
-  $scanCount.textContent = scanList.length;
-  localStorage.setItem('scanList', JSON.stringify(scanList));
-  localStorage.setItem('scanned', String(scanList.length)); // 대시보드 연동
-}
-function addCode(code){
-  code = (code||'').trim();
-  if(!code) return;
-  // 중복 방지(옵션) — 필요시 주석 해제
-  // if(scanList.includes(code)) return;
-  scanList.unshift(code);
-  renderList();
-}
-function removeAt(i){
-  scanList.splice(i,1);
-  renderList();
-}
-function clearAll(){
-  scanList = [];
-  renderList();
-}
-window.removeAt = removeAt;
+function render(){ $list.innerHTML=scanList.map((c,i)=>`<div class="item"><b>${c}</b><button class="btn red" onclick="rm(${i})">삭제</button></div>`).join(''); $scanCount.textContent=scanList.length; localStorage.setItem('scanList',JSON.stringify(scanList)); localStorage.setItem('scanned',String(scanList.length)); }
+function add(v){ v=(v||'').trim(); if(!v) return; scanList.unshift(v); render(); }
+function rm(i){ scanList.splice(i,1); render(); }
+function clearAll(){ scanList=[]; render(); }
+window.rm=rm; render();
+$scanInput.focus(); setInterval(()=>{ if(document.activeElement!==$scanInput) $scanInput.focus(); },1500);
+document.getElementById('btnAdd').onclick=()=>{ add($scanInput.value); $scanInput.value=''; };
+$scanInput.addEventListener('keydown',e=>{ if(e.key==='Enter'){ add($scanInput.value); $scanInput.value=''; }});
+document.getElementById('btnClear').onclick=clearAll;
+function goMap(){ localStorage.setItem('optimizeByGPS','1'); location.href='map.html'; }
 
-// 초기 렌더
-renderList();
-// 입력 포커스 유지 → 스캐너 자동 입력용
-$scanInput.focus();
-setInterval(()=>{ if(document.activeElement!==$scanInput) $scanInput.focus(); }, 1500);
-
-// 수기/스캐너 입력
-document.getElementById('btnAdd').onclick = ()=> addCode($scanInput.value), $scanInput.value='';
-$scanInput.addEventListener('keydown', e=>{
-  if(e.key==='Enter'){
-    addCode($scanInput.value);
-    $scanInput.value='';
-  }
-});
-document.getElementById('btnClear').onclick = clearAll;
-
-/** ===========================
- *  2) ZXing 카메라 바코드 스캔
- * ========================== */
-const codeReader = new ZXing.BrowserMultiFormatReader();
-let currentStream = null;
-let torchOn = false;
-
-// 카메라 시작(후면 우선)
-async function startCamera(){
-  try{
-    // 후면카메라 우선
-    const devices = await ZXing.BrowserCodeReader.listVideoInputDevices();
-    let backCamId = devices.find(d => /back|후면|environment/i.test(d.label))?.deviceId || devices?.[devices.length-1]?.deviceId;
-
-    const preview = document.getElementById('preview');
-    await codeReader.decodeFromVideoDevice(backCamId, preview, (result, err) => {
-      if (result) {
-        addCode(result.getText());
-      }
-    });
-
-    // 미디어 스트림 저장 & 플래시 지원 버튼 표시
-    currentStream = preview.srcObject;
-    const track = currentStream?.getVideoTracks?.()[0];
-    if (track && track.getCapabilities && track.getCapabilities().torch) {
-      document.getElementById('btnTorch').style.display = 'inline-block';
-    } else {
-      document.getElementById('btnTorch').style.display = 'none';
-    }
-  }catch(e){
-    console.warn(e);
-    alert('카메라 접근 실패: 권한을 허용했는지 확인해주세요.');
-  }
-}
-
-function stopCamera(){
-  codeReader.reset();
-  const preview = document.getElementById('preview');
-  const stream = preview.srcObject;
-  if(stream){
-    stream.getTracks().forEach(t=>t.stop());
-    preview.srcObject = null;
-  }
-  currentStream = null;
-}
-
-function toggleTorch(){
-  const track = currentStream?.getVideoTracks?.()[0];
-  if(!track) return;
-  const caps = track.getCapabilities();
-  if(!caps || !caps.torch) return;
-  torchOn = !torchOn;
-  track.applyConstraints({ advanced: [{ torch: torchOn }] }).catch(()=>{});
-}
-
-document.getElementById('btnStart').onclick = startCamera;
-document.getElementById('btnStop').onclick  = stopCamera;
-document.getElementById('btnTorch').onclick = toggleTorch;
-
-/** ===========================
- *  3) 최적 경로 설정 → map.html
- *     (데모: 정렬 플래그 저장)
- * ========================== */
-document.getElementById('btnOptimize').onclick = ()=>{
-  // 현재 위치 기준 정렬 플래그
-  localStorage.setItem('optimizeByGPS', '1');
-  alert('현재 위치 기준 최적 경로 정렬을 적용합니다. 지도 페이지로 이동하세요.');
-  location.href = 'map.html';
-};
+// ZXing
+const codeReader=new ZXing.BrowserMultiFormatReader(); let currentStream=null; let torchOn=false;
+async function startCam(){ try{ const devices=await ZXing.BrowserCodeReader.listVideoInputDevices(); const back=devices.find(d=>/back|후면|environment/i.test(d.label))?.deviceId||devices?.[devices.length-1]?.deviceId; const v=document.getElementById('preview'); await codeReader.decodeFromVideoDevice(back,v,(res,err)=>{ if(res) add(res.getText()); }); currentStream=v.srcObject; const track=currentStream?.getVideoTracks?.()[0]; document.getElementById('btnTorch').style.display=(track?.getCapabilities?.().torch?'inline-block':'none'); }catch(e){ alert('카메라 권한 확인이 필요합니다.'); } }
+function stopCam(){ codeReader.reset(); const v=document.getElementById('preview'); const s=v.srcObject; if(s){ s.getTracks().forEach(t=>t.stop()); v.srcObject=null; } currentStream=null; }
+function torch(){ const track=currentStream?.getVideoTracks?.()[0]; if(!track) return; const caps=track.getCapabilities?.(); if(!caps?.torch) return; torchOn=!torchOn; track.applyConstraints({advanced:[{torch:torchOn}]}); }
+btnStart.onclick=startCam; btnStop.onclick=stopCam; btnTorch.onclick=torch;
 </script>
 </body>
 </html>
-
