--- a/public/depart.html
+++ b/public/depart.html
@@ -3,44 +3,150 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>배송출발 - The Listen</title>
+<title>배송출발</title>
 <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/index.min.js"></script>
 <style>
-  body{margin:0;background:#f7f9fc;font-family:"Noto Sans KR",sans-serif}
-  header{background:#007bff;color:#fff;text-align:center;padding:12px;font-weight:800}
-  .wrap{max-width:920px;margin:14px auto;padding:0 12px}
-  .grid{display:grid;grid-template-columns:1fr 1fr;gap:14px}
-  .card{background:#fff;border-radius:16px;box-shadow:0 10px 28px rgba(0,0,0,.06);padding:14px}
-  h3{margin:8px 0 10px}
-  input[type="text"]{width:100%;padding:12px;border:1px solid #e5e7eb;border-radius:10px;font-size:18px;text-align:center}
-  input[type="text"]:focus{outline:2px solid #007bff}
-  .btn{background:#007bff;color:#fff;border:none;border-radius:10px;padding:10px 12px;cursor:pointer;font-weight:700}
-  .btn.gray{background:#6b7280}.btn.red{background:#ef4444}
-  .row{margin:8px 0}.btnRow{display:flex;gap:8px;flex-wrap:wrap}
-  .list{max-height:48vh;overflow:auto;border:1px solid #eef2f7;border-radius:12px;padding:8px}
-  .item{border-bottom:1px solid #f1f5f9;padding:10px 6px}
-  .count{font-weight:900;font-size:20px}
-  .camWrap{position:relative;border-radius:12px;overflow:hidden;background:#000}
-  video{width:100%;height:auto;display:block}
-  .guide{position:absolute;left:0;right:0;top:50%;transform:translateY(-50%);height:2px;background:rgba(0,123,255,.9);box-shadow:0 0 12px rgba(0,123,255,.6)}
-  .iconBtn{font-size:22px;background:#fff;border:none;cursor:pointer}
-  .bottomBtns{display:flex;gap:10px;justify-content:center;margin-top:16px}
+  body {
+    margin: 0;
+    background: #f7f9fc;
+    font-family: "Noto Sans KR", sans-serif;
+  }
+  header {
+    background: #007bff;
+    color: #fff;
+    text-align: center;
+    padding: 12px;
+    font-weight: 800;
+    font-size: 1.2rem;
+  }
+  .wrap {
+    max-width: 960px;
+    margin: 16px auto;
+    padding: 0 14px;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 14px;
+  }
+  .card {
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 10px 28px rgba(0, 0, 0, 0.06);
+    padding: 14px;
+  }
+  input[type="text"] {
+    width: 100%;
+    padding: 14px;
+    border: 1px solid #e5e7eb;
+    border-radius: 10px;
+    font-size: 18px;
+    text-align: center;
+  }
+  input:focus {
+    outline: 2px solid #007bff;
+  }
+  .btn {
+    background: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    padding: 10px 12px;
+    cursor: pointer;
+    font-weight: 700;
+  }
+  .btn.gray {
+    background: #6b7280;
+  }
+  .btn.red {
+    background: #ef4444;
+  }
+  .btnRow {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+    flex-wrap: wrap;
+  }
+  .list {
+    max-height: 400px;
+    overflow-y: auto;
+    border: 1px solid #eef2f7;
+    border-radius: 12px;
+    padding: 8px;
+  }
+  .item {
+    border-bottom: 1px solid #f1f5f9;
+    padding: 8px 6px;
+    cursor: pointer;
+  }
+  .item:hover {
+    background: #f1f5f9;
+  }
+  .count {
+    font-weight: 900;
+    font-size: 20px;
+  }
+  .camWrap {
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+    background: #000;
+  }
+  video {
+    width: 100%;
+    height: auto;
+    display: block;
+  }
+  .guide {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 2px;
+    background: rgba(0, 123, 255, 0.9);
+    box-shadow: 0 0 12px rgba(0, 123, 255, 0.6);
+  }
+  .iconBtn {
+    font-size: 24px;
+    background: #fff;
+    border: none;
+    cursor: pointer;
+  }
+  .bottomBtns {
+    display: flex;
+    gap: 12px;
+    justify-content: center;
+    margin-top: 16px;
+  }
+  #customerCard {
+    max-height: 320px;
+    overflow-y: auto;
+    padding: 8px;
+    border: 1px solid #eee;
+    border-radius: 12px;
+    background: #fff;
+  }
+  #customerCard .item {
+    padding: 8px 0;
+    border-bottom: 1px solid #f3f4f6;
+  }
 </style>
 </head>
+
 <body>
-<header>🚚 배송출발 (수량표기 / 대시보드 연동)</header>
+<header>배송출발</header>
 
 <div class="wrap">
   <div class="grid">
-    <!-- 왼쪽 : 스캔 -->
+    <!-- 왼쪽 : 스캔/입력 -->
     <div class="card">
-      <h3>📷 스캔 / 입력</h3>
-      <div class="row" style="display:flex;gap:6px;">
-        <input id="scanInput" type="text" inputmode="numeric" placeholder="운송장 번호 입력 또는 스캔" />
+      <div style="display:flex;gap:6px;">
+        <input id="scanInput" type="text" inputmode="numeric" placeholder="운송장번호 입력 또는 스캔" />
         <button class="iconBtn" id="btnCamera">📸</button>
       </div>
 
-      <div class="row">
+      <div class="btnRow">
         <button class="btn" id="btnAdd">추가</button>
         <button class="btn gray" id="btnClear">초기화</button>
       </div>
@@ -52,7 +158,7 @@
       </div>
     </div>
 
-    <!-- 오른쪽 : 목록 -->
+    <!-- 오른쪽 : 스캔목록 -->
     <div class="card">
       <h3>📦 스캔 목록 <span class="count" id="scanCount">0</span> 건</h3>
       <div class="list" id="list"></div>
@@ -75,11 +181,14 @@ const scanInput=document.getElementById('scanInput');
 const scanCount=document.getElementById('scanCount');
 const list=document.getElementById('list');
 const card=document.getElementById('customerCard');
+const cameraArea=document.getElementById('cameraArea');
+const btnCamera=document.getElementById('btnCamera');
+const btnStop=document.getElementById('btnStop');
 
 let scanList=JSON.parse(localStorage.getItem('scanList')||'[]');
-renderList();
+let codeReader=null;
 
-// 고객DB 예시 (운송장번호-고객정보)
+// 테스트용 고객 데이터
 const customers={
   "1001":{name:"이현우",address:"서울 송파구 올림픽로 300 (101동 202호)"},
   "1002":{name:"박지민",address:"경기 시흥시 수풀안길 19-30 (101동 1505호)"},
@@ -87,11 +196,11 @@ const customers={
   "1004":{name:"정유진",address:"경기 시흥시 수풀안길 19-30 (105동 303호)"}
 };
 
-// 리스트 렌더링
+// 리스트 표시
 function renderList(){
-  list.innerHTML=scanList.map((c,i)=>`
-    <div class="item" onclick="showCard('${c}')">#${i+1} 운송장: <b>${c}</b></div>
-  `).join('');
+  list.innerHTML=scanList.map((c,i)=>
+    `<div class='item' onclick="showCard('${c}')">#${i+1} 운송장: <b>${c}</b></div>`
+  ).join('');
   scanCount.textContent=scanList.length;
   localStorage.setItem('scanList',JSON.stringify(scanList));
   localStorage.setItem('scanned',String(scanList.length));
@@ -99,68 +208,65 @@ function renderList(){
 
 function addScan(code){
   if(!code) return;
+  if(scanList.length>=1000){alert("1000건까지만 등록 가능합니다.");return;}
   if(!scanList.includes(code)) scanList.unshift(code);
   renderList();
   showCard(code);
   scanInput.value='';
 }
-function clearList(){ scanList=[]; renderList(); card.textContent='스캔 시 고객정보가 표시됩니다.'; }
 
-// 고객카드 표시
-function showCard(code){
-  const c=customers[code];
-  if(!c){ card.innerHTML=`<b>${code}</b><br>등록되지 않은 운송장입니다.`; return; }
-  card.innerHTML=`
-    <div><b>운송장</b>: ${code}</div>
-    <div><b>고객명</b>: ${c.name}</div>
-    <div><b>주소</b>: ${c.address}</div>
-  `;
+function clearList(){
+  scanList=[];
+  renderList();
+  card.textContent="스캔 시 고객정보가 표시됩니다.";
 }
 
-// 입력창 클릭 시 숫자 키패드 표시
-scanInput.addEventListener('focus',()=>{ scanInput.inputMode='numeric'; });
+function showCard(code){
+  const c=customers[code];
+  if(!c){ card.innerHTML=`<div class='item'><b>${code}</b> - 등록되지 않은 운송장입니다.</div>`; return;}
+  card.innerHTML=`<div class='item'><b>운송장:</b> ${code}<br><b>고객:</b> ${c.name}<br><b>주소:</b> ${c.address}</div>`;
+}
 
-// 추가 버튼
-document.getElementById('btnAdd').onclick=()=>addScan(scanInput.value.trim());
-// 초기화 버튼
-document.getElementById('btnClear').onclick=clearList;
+// 입력창 클릭 시 숫자 키패드 활성화
+scanInput.addEventListener("focus",()=>scanInput.inputMode="numeric");
+
+// 추가/초기화 버튼
+document.getElementById("btnAdd").onclick=()=>addScan(scanInput.value.trim());
+document.getElementById("btnClear").onclick=clearList;
 
 // 카메라 스캔
-const cameraArea=document.getElementById('cameraArea');
-const btnCamera=document.getElementById('btnCamera');
-const btnStop=document.getElementById('btnStop');
-let codeReader=null;
-
-btnCamera.onclick=()=>{
-  if(cameraArea.style.display==='none') startCam();
-  else stopCam();
-};
+btnCamera.onclick=()=>cameraArea.style.display==='none'?startCam():stopCam();
 btnStop.onclick=stopCam;
 
 function startCam(){
-  cameraArea.style.display='block';
+  cameraArea.style.display="block";
   codeReader=new ZXing.BrowserMultiFormatReader();
-  codeReader.decodeFromVideoDevice(null,'preview',(res,err)=>{
+  codeReader.decodeFromVideoDevice(null,"preview",(res,err)=>{
     if(res){ addScan(res.text); stopCam(); }
   });
 }
 function stopCam(){
   if(codeReader){ codeReader.reset(); codeReader=null; }
-  cameraArea.style.display='none';
+  cameraArea.style.display="none";
 }
 
 // 경로 최적화
-document.getElementById('btnOptimize').onclick=()=>{
-  alert('🧭 고객카드 경로가 최적화되었습니다.\n(순서 1~300 재배치 완료)');
-  localStorage.setItem('optimizedRoute','1');
+document.getElementById("btnOptimize").onclick=()=>{
+  if(scanList.length===0){alert("스캔된 운송장이 없습니다.");return;}
+  alert(`🧭 ${scanList.length}건 경로 최적화 완료 (순번 1~${scanList.length})`);
+  localStorage.setItem("optimizedRoute","1");
 };
 
 // 출발 전송
-document.getElementById('btnStart').onclick=()=>{
-  alert('🚀 출발 전송 완료\n지도 페이지로 이동합니다.');
-  localStorage.setItem('departStarted','1');
-  location.href='map.html';
+document.getElementById("btnStart").onclick=()=>{
+  if(scanList.length===0){alert("스캔된 운송장이 없습니다.");return;}
+  alert("🚀 출발 전송 완료\n지도 페이지로 이동합니다.");
+  localStorage.setItem("departStarted","1");
+  location.href="map.html";
 };
+
+// 초기 표시
+renderList();
 </script>
 </body>
 </html>
